# Symbolic-Regression-Genetic-Programming

./: .gitignore  LICENSE  README.md  data.pickle  datasets.py  fs_methods.py  fs_techniques.py  noname.py  pyproject.toml  pysr_utils.py  requirements.txt  setup.py  sr_gp_methods.py  test.ipynb  testing_methods.ipynb
examples/: .env  method_ranking.ipynb  results_analysis.ipynb  results_real.ipynb  results_synthetic.ipynb  run.py
notebooks/: run.py  run_dask.py  run_joblib.py  test.ipynb
src/symbolic_regression/: datasets.py
src/symbolic_regression/feature_selections/: base.py  cmi.py  cminn.py  fs_techniques.py  gppi.py  gpshap.py  pi.py  shap.py
src/symbolic_regression/methods/: base.py  gp.py  gpcmi.py  gppi.py  gpshap.py  rfgp.py
src/symbolic_regression/utils/: data_utils.py  datasets.py  io_utils.py  losses.py  model_utils.py  pysr_utils.py  stats.py  system_utils.py  visualization.py
tests/: run.py  run_dask.py  run_joblib.py  test.ipynb
