[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-regression"
version = "0.1.0"
description = "Symbolic Regression using Genetic Programming"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "pysr>=1.5.10",
    "dill>=0.4.1",
    "shap>=0.49.1",
    "NPEET @ git+https://github.com/gregversteeg/NPEET.git",
    "pmlb>=1.0.1.post3",
    "ucimlrepo>=0.0.7",
    "seaborn>=0.13.2"
]

authors = [
    { name = "Kevin Haka", email = "kevihaka@gmail.com" }
]

[project.urls]
Repository = "https://github.com/KevinHaka/Symbolic-Regression-Genetic-Programming"

[tool.setuptools.packages.find]
where = ["src"]